--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStorage</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
         </nav>
 
         <div>
-            <img src="/src/Img/Banner2.png" alt="banner" id="banner">
+            <img src="src/Img/Banner2.png" alt="banner" id="banner">
         </div>
    
     <main id="conteudo">
