--- a/pages/vitrine.html
+++ b/pages/vitrine.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estante</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
   <main>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -22,7 +22,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item1.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item1.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -34,7 +34,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item2.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item2.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item1.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item1.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -58,7 +58,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -70,7 +70,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item1.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item1.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -82,7 +82,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item2.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item2.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -94,7 +94,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -106,7 +106,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item1.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item1.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -118,7 +118,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item2.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item2.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -130,7 +130,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -142,7 +142,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item2.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item2.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -154,7 +154,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -166,7 +166,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item2.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item2.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
@@ -178,7 +178,7 @@
       </p>
     </div>
     <div class="prod_area" id="prod_area">
-      <img src="/src/Img/item1.png" alt="produto" class="imgProd">
+      <img src="../src/Img/item1.png" alt="produto" class="imgProd">
       <p><b>Produto:</b>kit maquiagem</p>
       <p><b>Codigo:</b> Codigo:001</p>
       <p><b>Fabricante:</b>Web.Storage</p>
