--- a/pages/vitrine.html
+++ b/pages/vitrine.html
@@ -30,8 +30,9 @@
       <p class="valor"><b>Preço:</b> 150,00 R$</p>
       <br>
       <p>
-        Kit de maquiagem com 20 peças
+        <a href="https://api.whatsapp.com/send?phone=5581992344128&text=Ola%20gostaria%20do%20produto%0ANome:%20Creme%20de%20pelo%20Narural%20Schin%0ATipo:%20Cosmetico%0ACodigo:%20001%0AValor:%20R$50,00" target="_blank">Peça o seu clice aqui!!!</a>
       </p>
+      
     </div>
     <div class="prod_area" id="prod_area">
       <img src="../src/Img/item2.png" alt="produto" class="imgProd">
